# financemodel-platform

./: CMakeLists.txt  README.md  main.cpp
Profit-and_loss/: ProfitLossCalculator.cpp
src/Aged_debtors/: Aged_debtors.cpp  Aged_debtors.h
src/Data/: dataprocessing.cpp  dataprocessing.h  datareadme.md
src/Profit-and_loss/: ProfitLossCalculator.cpp  ProfitLossCalculator.h  Profitloss.md
src/balancesheet/: balancesheet.cpp  balancesheet.h
src/nominal_ledger/: nominal_ledger.cpp  nominal_ledger.h
